--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@chakra-ui/react": "^1.8.8",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@nhost/nextjs": "^1.7.0",
+    "@nhost/react": "^0.12.0",
     "framer-motion": "^6",
+    "graphql": "^16.5.0",
     "next": "12.1.5",
     "react": "18.1.0",
     "react-beautiful-dnd": "^13.1.0",
