--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pomotask-next",
+  "name": "mao-amiga",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11",
     "@nhost/nextjs": "^1.7.0",
     "@nhost/react": "^0.12.0",
+    "axios": "^0.27.2",
     "framer-motion": "^6",
     "graphql": "^16.5.0",
     "next": "12.1.5",
@@ -24,6 +25,7 @@
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/node": "17.0.30",
     "@types/react": "18.0.8",
     "@types/react-beautiful-dnd": "^13.1.2",
