--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react": "18.1.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "18.1.0",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
@@ -30,6 +31,7 @@
     "@types/react": "18.0.8",
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "18.0.3",
+    "@types/uuid": "^8.3.4",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
     "typescript": "4.6.4"
