--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@emotion/styled": "^11",
     "@nhost/nextjs": "^1.7.0",
     "@nhost/react": "^0.12.0",
+    "@types/moment": "^2.13.0",
     "axios": "^0.27.2",
     "framer-motion": "^6",
     "graphql": "^16.5.0",
+    "moment": "^2.29.4",
     "next": "12.1.5",
     "react": "18.1.0",
     "react-beautiful-dnd": "^13.1.0",
